<package>
  <name>uwb</name>
  <version>1.2.0</version>
  <description>
     uwb is a package providing ranging-data of d2Sense uwb-nodes
  </description>

  <maintainer email="krautstrung@comnovo.de">Tobias K</maintainer>

  <license>BSD</license>

  <author>Tobias K </author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>python-serial</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
</package>


